-Sweden now starts with a 'Christian Opposition' estate privilege which gets removed via event later
-Fixed Eunuch privileges not reducing autonomy
-Forming Ireland or Ruthenia will now keep the country color of the original tag
-Added Griko culture to south Italy
-Turned several nations in the Near East into tributaries of several invading nations
-Other minor localization/bug fixes

# v 2.2.9 #

-Updated the mod to EU4 version 1.35
-Integrated the 'Voltaire's Nightmare Intricate Trade' submod by Sulphur, enhancing trade routes
-Added the following new National Idea sets: Sorrento (contributed by Spyhaus)
-Added the following monuments: Castle of Cetatea Alba, Mines of Rosia Montana, Montecassino Abbacy, Svaneti Towers, Mount Kasbek, Mostar Bridge & City Center, Historical Center of Zagreb, Bakhchisaray Palace, Metropolitan Cathedral of Palermo, Mount Athos, Hohenzollern Castle, Baroque Residence & Gardens of Würzburg, Roman Monuments of Trier, Cité de Carcassonne, Grazer Landeszeughaus, Stahleck Castle, Diocletian's Palace, Naryn-Kala, Saint Catherine's Monastery, Safranbolu Caravansaries, Jasna Góra, Cathedral of the Assumption of Smolensk
-Added the following government reforms: Lesbian Matriarchate, Georgian Patronqmoba, Prague Confederation, Freegraviate, Seljuk Federation
-Reworked government reforms for Abbacies and added many new ones (19 in total)
-Added the following government mechanics: Outremer Government, Byzantine Court Adoptions, Hussite Ecumene
-Added 7 new naval doctrines
-Reworked reforms and decrees of the Kievan Rus (many thanks to Advocatus Diaboli)
-Added the following ruler personalities: Inept (for Byzantium), Proficient (for Byzantium), Persuasive Politican (for Italian Communes)
-Added several new estate privileges to Mamluks and Holy Orders
-Added Fetishist missions from Origins
-Added Gotland missions from Lions of the North
-Added Lübeck missions from Lions of the North
-Added Italian Minor missions from 1.30