@@ -356,6 +356,33 @@ on_new_monarch = {
 on_monarch_death = {
 	if = {
 		limit = {
+			has_dlc = "King of Kings"
+			started_in = 1431.11.9
+			NOT = { started_in = 1445.3.8 }
+			tag = JYA
+			is_free_or_tributary_trigger = yes
+			NOT = { war_with = QAR }
+			QAR = {
+				exists = yes
+				is_free_or_tributary_trigger = yes
+			}
+		}
+		QAR = {
+			country_event = { id = flavor_turkoman.6 }
+		}
+		if = {
+			limit = { ai = yes }
+			define_ruler = {
+				name = "Fulad"
+				dynasty = "Qara Qoyunlu"
+				adm = 1
+				dip = 1
+				mil = 2
+			}
+		}
+	}
+	if = {
+		limit = {
 			tag = ASE
 			is_lesser_in_union = no
 			has_country_flag = viking_invasion_flag
@@ -1076,7 +1103,9 @@ on_centralized_state = {
 }
 
 heir_on_shipwreck = {
-	country_event = { id = hremodevents.70 } # White Ship Disaster
+	events = {
+		hremodevents.70 # White Ship Disaster
+	}
 }
 
 on_new_age = {
