@@ -94,7 +94,8 @@ capital = 6301
 #Usurped by Qara
 1431.11.9 = {
 	primary_culture = azerbaijani
-	set_ruler_flag = ispend_qara_qoyunlu_flag
+	override_country_name = EMIRATE_OF_BAGHDAD
+	set_country_flag = has_overriden_name_flag
 	capital = 6301
 	monarch = {
 		name = "Ispend"
@@ -106,6 +107,12 @@ capital = 6301
 	}
 }
 1445.3.8 = {
-	clr_ruler_flag = ispend_qara_qoyunlu_flag
+	monarch = {
+		name = "Fulad"
+		dynasty = "Qara Qoyunlu"
+		adm = 1
+		dip = 1
+		mil = 2
+	}
 }
 #1446.6.9 to QAR
