@@ -3,6 +3,7 @@ government_rank = 3
 add_government_reform = beylik_government
 religion = sunni
 technology_group = ottoman
+primary_culture = turkish
 capital = 6704
 religious_school = hanafi_school
 
