@@ -1,5 +1,7 @@
 ﻿l_english:
 #Custom Names
+ EMIRATE_OF_BAGHDAD: "Emirate of Baghdad"
+ EMIRATE_OF_BAGHDAD_ADJ: "Baghdadi"
  OSMAN_NAME: "Osman"
  OSMAN_NAME_ADJ: "Ottoman"
  CHOBANIDS_NAME: "Chobanids"
