@@ -1,5 +1,7 @@
 ﻿l_german:
 #Custom Names
+ EMIRATE_OF_BAGHDAD: "Emirat Bagdad"
+ EMIRATE_OF_BAGHDAD_ADJ: "Bagdadisch"
  OSMAN_NAME: "Osman"
  OSMAN_NAME_ADJ: "Osmanisch"
  CHOBANIDS_NAME: "Tschupaniden"
@@ -2487,7 +2489,7 @@
  TSN_ADJ: "Tasanisch"
  HCM_ADJ: "Bayramisch"
  PRV_ADJ: "Pervânisch"
- BGH_ADJ: "Baghdadisch"
+ BGH_ADJ: "Bagdadisch"
  MSL_ADJ: "Mosulisch"
  SNJ_ADJ: "Sinjarisch"
  DSC_ADJ: "Damascisch"
