@@ -26,6 +26,7 @@
 -Forming Ireland or Ruthenia will now keep the country color of the original tag
 -Added Griko culture to south Italy
 -Turned several nations in the Near East into tributaries of several invading nations
+-Slight history changes to the Qara Qoyunlu civil war
 -Other minor localization/bug fixes
 
 # v 2.2.9 #
